--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,12 +12,13 @@
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav navbar center">
-        <li><%= link_to "О студии", root_path %></li>
-        <li><%= link_to "Уроки", lessons_path %></li>
-        <li><%= link_to "Галерея", gallery_path %></li>
-        <li><%= link_to "События", events_path %></li>  
-        <li><%= link_to "Блог", blog_path %></li>  
-        <li><%= link_to "Контакты", contacts_path %></li>    
+        <li><a class="current" href="/">О студии</a></li>
+        <li><a class="current" href="/lessons">Уроки</a></li>
+        <li><a class="current" href="/gallery">Галерея</a></li>
+        <li><a class="current" href="/events">События</a></li>  
+        <li><a class="current" href="/blog">Блог</a></li>  
+        <li><a class="current" href="/contacts">Контакты</a></li>    
     </ul>
   </div><!-- /.navbar-collapse -->
 </nav>
+
