--- a/app/views/pages/blog.html.erb
+++ b/app/views/pages/blog.html.erb
@@ -9,46 +9,63 @@
                     </h2>
                     <hr>
                 </div><!-- #col-lg-12 Наш Блог-->
-                <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src=<%= asset_path('blog-1.jpg') %>/>
+                <div class="col-md-10 col-sm-10">
+                    <img class="img-responsive img-border img-full" src=<%= asset_path('blog1.jpg') %>/>
                     
-                    <h2>Post Title
+                    <h2>Картины, от которых становится тепло на душе
                         <br>
-                        <small>October 13, 2013</small>
+                        <small>24 октября 2014</small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                    <a href="#" class="btn btn-default btn-lg">Read More</a>
+                    <p>Художница Татьяна Самошкина создает на бумаге теплые, немного наивные, но бесконечно добрые миры. В них всего понемногу: есть уютные коты и милые лисы, завитки морских волн и вспышки далеких звезд, чуть-чуть одиночества и грусти — только очень светлой. Таня — непрофессиональная художница, однако видимая простота ее образов нисколько не умаляет их обаяния. Эти рисунки как чашка согревающего чая после прогулки под моросящим осенним дождем.</p>
+                    <a href="http://www.adme.ru/tvorchestvo-hudozhniki/kartiny-ot-kotoryh-stanovitsya-teplo-na-dushe-794060/" class="btn btn-default btn-lg" target="_blank">Подробнее</a>
                     <hr>
                 </div><!-- #col-lg-12 Post 1 -->
-                <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src=<%= asset_path('blog-2.jpg') %>/>
-                    <h2>Post Title
+                <div class="col-md-10 col-sm-10">
+                    <img class="img-responsive img-border img-full" src=<%= asset_path('blog2.jpg') %>/>
+                    <h2>Мир Дали
                         <br>
-                        <small>October 13, 2013</small>
+                        <small>до 15 января 2015</small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                    <a href="#" class="btn btn-default btn-lg">Read More</a>
+                    <p>Визуализация картин художника под музыкальное сопровождение</p>
+                    <a href="http://www.afisha.ru/exhibition/photo/97381/" class="btn btn-default btn-lg" target="_blank">Подробнее</a>
                     <hr>
                 </div><!-- #col-lg-12 Post 2 -->
-                <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src=<%= asset_path('blog-3.jpg') %>/>
-                    <h2>Post Title
+                <div class="col-md-10 col-sm-10">
+                    <img class="img-responsive img-border img-full" src=<%= asset_path('blog3.jpg') %>/>
+                    <h2>Лучшие современные галереи Москвы
                         <br>
-                        <small>October 13, 2013</small>
+                        <small>23 декабря 2013</small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                    <a href="#" class="btn btn-default btn-lg">Read More</a>
+                    <p>
+                        Пожалуй, самый длинный список мест от Kudago: если не все галереи Москвы, то, безусловно, большая их часть. Выбирайте, вдохновляйтесь, наслаждайтесь прекрасным!
+                    </p>
+                    <p>
+                        Галерея Stella Art Foundation, Галерея «Эритаж»,
+                        Центр дизайна ARTPLAY, Центр современного искусства «Винзавод» и др.
+                    </p>
+                    <a href="http://kudago.com/msk/list/luchshie-galerei-moskvy/" class="btn btn-default btn-lg" target="_blank">Подробнее</a>
                     <hr>
                 </div><!-- #col-lg-12 Post 3-->
+                <div class="col-md-10 col-sm-10">
+                    <img class="img-responsive img-border img-full" src=<%= asset_path('blog4.jpg') %>/>
+                    <h2>Трогательные совы художницы Инги Пальцер
+                        <br>
+                        <small>10 октября 2014</small>
+                    </h2>
+                    <p>Доброта в нашем мире еще осталась, и она совершенно точно живет в невероятно светлых иллюстрациях Инги Пальцер. Для нее, биолога по образованию и профессии, рисунок — это хобби, начавшееся еще в детской художественной школе. Пишет художница акварелью, «живой» бумажный рисунок предпочитая компьютерной графике.</p>
+                    <a href="http://www.adme.ru/tvorchestvo-hudozhniki/trogatelnye-sovy-hudozhnicy-ingi-palcer-786110/" class="btn btn-default btn-lg" target="_blank">Подробнее</a>
+                    <hr>
+                </div><!-- #col-lg-12 Post 2 -->
 
-                <div class="col-lg-12 text-center">
+                <!-- <div class="col-lg-12 text-center">
                     <ul class="pager">
                         <li class="previous"><a href="#">← Older</a>
                         </li>
                         <li class="next"><a href="#">Newer →</a>
                         </li>
                     </ul>
-                </div><!-- #col-lg-12 Older Newer-->
+                </div>  #col-lg-12 Older Newer -->
+
                 <div class="clearfix"></div>
             </div><!-- #box --> 
         </div><!-- #jumbotron center --> 
