--- a/app/views/pages/events.html.erb
+++ b/app/views/pages/events.html.erb
@@ -10,20 +10,19 @@
 		            <div class="col-lg-4 col-sm-6 text-center">
 		                <img class="img-circle img-responsive img-center" src=<%= asset_path('privateclass.jpg') %> alt="Мастер-класс для вечеринки" style="width:200px;height:200px"/>
 		                <h3>Мастер-класс для частных целей</h3>
-		                <p class="column">What does this team member to? Keep it short! This is also a great spot for social links!</p>
-		                <p class="column">What does this team member to? Keep it short! This is also a great spot for social links!</p>
+		                <p class="column">В студии проводятся открытые тематические мастер-классы для всех желающих.</p>
+		                <p class="column">Также Вы можете заказать мастер-класс на День Рождения или любую другую вечеринку.</p>
 		            </div><!-- #col-lg-4 col-sm-6 Мастер-класс для частных целей -->
 		            <div class="col-lg-4 col-sm-6 text-center">
 		                <img class="img-circle img-responsive img-center" src=<%= asset_path('corporateclass.jpg') %> alt="Корпоративный мастер-класс" style="width:200px;height:200px"/>
 		                <h3>Мастер-класс для корпоративных целей</h3>
-		                <p class="column">What does this team member to? Keep it short! This is also a great spot for social links!</p>
-		                <p class="column">What does this team member to? Keep it short! This is also a great spot for social links!</p>
+		                <p class="column">Тематические мастер классы в вашем офисе для вашего коллектива или группы единомышленников.</p>
 		            </div><!-- #col-lg-4 col-sm-6 Мастер-класс для корпоративных целей -->
 		            <div class="col-lg-4 col-sm-6 text-center">
 		                <img class="img-circle img-responsive img-center" src=<%= asset_path('plener.jpg') %> alt="Пленэр" style="width:200px;height:200px"/>
-		                <h3>Пленэр</h3>
-		                <p class="column">What does this team member to? Keep it short! This is also a great spot for social links!</p>
-		                <p class="column">What does this team member to? Keep it short! This is also a great spot for social links!</p>
+		                <h3>Пленер</h3>
+		                <p class="column">Занятия на пленере – возможность писать и рисовать в открытом пространстве, в естественных условиях, изучая, как естественное освещение, свет и воздух влияют на цвет и тон изображения.</p>
+		                
 		            </div><!-- #col-lg-4 col-sm-6 Пленэр -->
                 <div class="clear"></div>
 
@@ -41,13 +40,37 @@
                 </div></br><!-- #col-lg-12 События  -->
                 <div class="col-lg-12 text-center">
 
-                	   <div class="col-md-10 col-sm-10">
-                	   	  <h2>Курс «Рисунок для ландшафтных дизайнеров и флористов»</h2>
-                	      <h3>15, 22, 29 ноября и 6, 13 декабря 2014г с 12.00 до 14.00</h3> 
-                	      <p>Стоимость курса 7500 руб</p>
-		                    <img class="img-responsive img-border img-full" src=<%= asset_path('landscape.jpg') %>/>
-		                    <a href="https://www.facebook.com/events/782873458437214/" class="btn btn-default btn-lg" target="_blank">Подробнее</a>
-		                    <hr>
+                	   <div class="col-md-10">
+                	   	   <h2>Курс «Рисунок для ландшафтных дизайнеров и флористов»</h2>
+                	       <h3>15, 22, 29 ноября и 6, 13 декабря 2014г с 12.00 до 14.30</h3> 
+                	       <p>Стоимость курса 7500 руб</p>
+		                     <img class="img-responsive img-border img-full" src=<%= asset_path('landscape.jpg') %>/>
+		                     <h3>Урок 1.</h3>
+		                     <p>
+													Изучаем базовые основы композиции  и перспективы – для грамотного расположения рисунка на листе. Правила компоновки горизонтальной и вертикальной композиции,  компоновка в круг, квадрат. Правила перспективы. Введение в цвет. Основы колористики. Цветовой круг. Все о сочетании цветов, нюансы и контрасты. Быстрые эскизы цветочных композиций на закрепление пройденного материала.
+												 </p>
+												 <h3>Урок 2.</h3>
+												 <p>
+													Изучаем штрих, линии и тон – как их использовать в рисовании цветочных композиции. Работа на черной бумаге белым карандашом и пастелью – изображение фактуры стекла, керамики и растений.                                  Рисуем цветочные композиции используя все полученные знания. 
+												 </p>	
+												 <h3>Урок 3.</h3>
+												 <p>
+													Изучаем форму цветов на основе геометрических фигур – шар, эллипс, конус. Учимся изображать тон, свет, тень. Быстрые рисунки геометрических фигур и эскизы цветов для практики. Рисуем цветочную композицию, применяя на практике правила композиции, перспективы, формы и светотени. Графический рисунок с применением цвета.
+												 </p>	
+												 <h3>Урок 4.</h3>
+												 <p>
+													Цвет. Сочетания цветов в цветочной композиции. Контрастные цвета, сближенные цвета.  Соотношение цвета и тона. Рисуем пастелью – две цветочные композиции, одну на контрасте и вторую на сближенных цветах.
+                          Материал – белая бумага, карандаши, пастель/пастельные карандаши.
+                         </p>
+                         <h3>Урок 5.</h3> 
+                         <p>
+                         	Рисуем пастелью на цветной бумаге – учимся использовать цвет фона в изображении.  Рисунок на контрастном фоне – изучаем, как контрастный цвет фона может обогатить нашу композицию и дать пастели больше цветовых решений. и рисунок на сближенном фоне – учимся, как изображать тонкие сближенные цвета. 
+                         </p>	 
+                         <p>
+                         	После каждого занятия дается домашнее задание, выполнение которого желательно для закрепления полученных знаний и практики, что поможет вам наилучшим образом использовать  все полученные навыки для дальнейшей работы.
+                         </p>	    
+		                     <!-- <a href="https://www.facebook.com/events/782873458437214/" class="btn btn-default btn-lg" target="_blank">Подробнее</a>-->
+		                     <hr>
 		                </div><!-- #col-md-10 col-sm-10 Курс «Рисунок для ландшафтных дизайнеров и флористов» -->
                 	   
                 </div><!-- #col-lg-12 Курс «Рисунок для ландшафтных дизайнеров и флористов» --> 	
