--- a/app/views/pages/gallery.html.erb
+++ b/app/views/pages/gallery.html.erb
@@ -14,10 +14,13 @@
 								<div><img src=<%= asset_path('givopis_4.jpg') %> title="Живопись 4" alt="Живопись" class="" height="350"></div>
 								<div><img src=<%= asset_path('givopis5.jpg') %> title="Живопись 5" alt="Живопись" class="" height="350"></div>
 								<div><img src=<%= asset_path('givopis6.jpg') %> title="Живопись 6" alt="Живопись" class="" height="350"></div>
-								<!-- <div><img src=<%= asset_path('givopis7.jpg') %> title="Живопись 7" alt="Живопись" class="" height="350"></div> --> 
-								<!-- <div><img src=<%= asset_path('givopis8.jpg') %> title="Живопись 8" alt="Живопись" class="" height="350"></div> --> 
+								<div><img src=<%= asset_path('givopis_7.jpg') %> title="Живопись 7" alt="Живопись" class="" height="350"></div> 
+								<div><img src=<%= asset_path('givopis_8.jpg') %> title="Живопись 8" alt="Живопись" class="" height="350"></div>  
 								<div><img src=<%= asset_path('givopis9.jpg') %> title="Живопись 9" alt="Живопись" class="" height="350"></div>
 								<div><img src=<%= asset_path('givopis10.jpg') %> title="Живопись 10" alt="Живопись" class="" height="350"></div>
+								<div><img src=<%= asset_path('givopis11.jpg') %> title="Живопись 10" alt="Живопись" class="" height="350"></div>
+								<div><img src=<%= asset_path('givopis12.jpg') %> title="Живопись 10" alt="Живопись" class="" height="350"></div>
+								<div><img src=<%= asset_path('givopis13.jpg') %> title="Живопись 10" alt="Живопись" class="" height="350"></div>
 								
 				    </div><!-- #slider center gallery -->
 
