--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -26,8 +26,7 @@ Author: Ekaterina Kuznetsova
 
 body {
 font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-background: url('../images/bg.jpg') no-repeat center center fixed;
-background-image: url(http://startbootstrap.com/templates/business-casual/img/bg.jpg);
+background-image: url('https://raw.githubusercontent.com/myspecialspace/art-jz/master/app/assets/images/bg.jpg'); 
 background-position-x: 50%;
 background-position-y: 50%;
 background-size: cover;
