added new stuff to blog

--- a/app/views/pages/blog.html.erb
+++ b/app/views/pages/blog.html.erb
@@ -10,26 +10,38 @@
                     <hr>
                 </div><!-- #col-lg-12 Наш Блог-->
                 <div class="col-md-10 col-sm-10">
-                    <img class="img-responsive img-border img-full" src=<%= asset_path('blog1.jpg') %>/>
+                    <img class="img-responsive img-border img-full" src=<%= asset_path('blog6.jpg') %>/>
                     
-                    <h2>Картины, от которых становится тепло на душе
+                    <h2>Метрополитен-музей выложил фотографии почти 400 тысяч экспонатов
                         <br>
-                        <small>24 октября 2014</small>
+                        <small>3 ноября 2014</small>
                     </h2>
-                    <p>Художница Татьяна Самошкина создает на бумаге теплые, немного наивные, но бесконечно добрые миры. В них всего понемногу: есть уютные коты и милые лисы, завитки морских волн и вспышки далеких звезд, чуть-чуть одиночества и грусти — только очень светлой. Таня — непрофессиональная художница, однако видимая простота ее образов нисколько не умаляет их обаяния. Эти рисунки как чашка согревающего чая после прогулки под моросящим осенним дождем.</p>
-                    <a href="http://www.adme.ru/tvorchestvo-hudozhniki/kartiny-ot-kotoryh-stanovitsya-teplo-na-dushe-794060/" class="btn btn-default btn-lg" target="_blank">Подробнее</a>
+                    <p>Нью-йоркский Метрополитен-музей выложил на своём сайте фотографии 394 253 экспонатов, которые находятся в коллекции организации. Об этом сообщается на сайте музея.</p>
+                    <p>В оцифрованной коллекции музея находятся сканированные фотографии, снимки картин, скульптур, экспонатов декоративно-прикладного искусства и других произведений. Все фотографии можно использовать в некоммерческих целях и для научных публикаций в СМИ. При этом они доступны в высоком разрешении (до 12 мегапикселей). Представленные работы можно сортировать по автору, направлению в искусстве, дате, стране и по использованным при их создании методам и материалам.</p>
+                    <a href="http://www.lookatme.ru/mag/live/experience-news/204405-museum" class="btn btn-default btn-lg" target="_blank">Подробнее</a>
                     <hr>
-                </div><!-- #col-lg-12 Post 1 -->
+                </div><!-- #col-lg-12 Post 6 -->
                 <div class="col-md-10 col-sm-10">
-                    <img class="img-responsive img-border img-full" src=<%= asset_path('blog2.jpg') %>/>
-                    <h2>Мир Дали
+                    <img class="img-responsive img-border img-full" src=<%= asset_path('blog5.jpg') %>/>
+                    
+                    <h2>Прекрасная подборка японских гравюр из собрания Пушкинского музея
                         <br>
-                        <small>до 15 января 2015</small>
+                        <small>3 ноября 2014</small>
                     </h2>
-                    <p>Визуализация картин художника под музыкальное сопровождение</p>
-                    <a href="http://www.afisha.ru/exhibition/photo/97381/" class="btn btn-default btn-lg" target="_blank">Подробнее</a>
+                    <p>Государственный музей изобразительных искусств имени А.С. Пушкина представляет электронный каталог собрания японской гравюры XVIII–XIX веков, в который вошло более шестисот произведений печатной графики, созданных японскими художниками начиная с середины XVIII и вплоть до рубежа XIX–XX веков.</p>
+                    <a href="http://www.japaneseprints.ru/" class="btn btn-default btn-lg" target="_blank">Подробнее</a>
                     <hr>
-                </div><!-- #col-lg-12 Post 2 -->
+                </div><!-- #col-lg-12 Post 5 -->
+                <div class="col-md-10 col-sm-10">
+                    <img class="img-responsive img-border img-full" src=<%= asset_path('blog4.jpg') %>/>
+                    <h2>Трогательные совы художницы Инги Пальцер
+                        <br>
+                        <small>10 октября 2014</small>
+                    </h2>
+                    <p>Доброта в нашем мире еще осталась, и она совершенно точно живет в невероятно светлых иллюстрациях Инги Пальцер. Для нее, биолога по образованию и профессии, рисунок — это хобби, начавшееся еще в детской художественной школе. Пишет художница акварелью, «живой» бумажный рисунок предпочитая компьютерной графике.</p>
+                    <a href="http://www.adme.ru/tvorchestvo-hudozhniki/trogatelnye-sovy-hudozhnicy-ingi-palcer-786110/" class="btn btn-default btn-lg" target="_blank">Подробнее</a>
+                    <hr>
+                </div><!-- #col-lg-12 Post 4 -->
                 <div class="col-md-10 col-sm-10">
                     <img class="img-responsive img-border img-full" src=<%= asset_path('blog3.jpg') %>/>
                     <h2>Лучшие современные галереи Москвы
@@ -47,15 +59,29 @@
                     <hr>
                 </div><!-- #col-lg-12 Post 3-->
                 <div class="col-md-10 col-sm-10">
-                    <img class="img-responsive img-border img-full" src=<%= asset_path('blog4.jpg') %>/>
-                    <h2>Трогательные совы художницы Инги Пальцер
+                    <img class="img-responsive img-border img-full" src=<%= asset_path('blog2.jpg') %>/>
+                    <h2>Мир Дали
                         <br>
-                        <small>10 октября 2014</small>
+                        <small>до 15 января 2015</small>
                     </h2>
-                    <p>Доброта в нашем мире еще осталась, и она совершенно точно живет в невероятно светлых иллюстрациях Инги Пальцер. Для нее, биолога по образованию и профессии, рисунок — это хобби, начавшееся еще в детской художественной школе. Пишет художница акварелью, «живой» бумажный рисунок предпочитая компьютерной графике.</p>
-                    <a href="http://www.adme.ru/tvorchestvo-hudozhniki/trogatelnye-sovy-hudozhnicy-ingi-palcer-786110/" class="btn btn-default btn-lg" target="_blank">Подробнее</a>
+                    <p>Визуализация картин художника под музыкальное сопровождение</p>
+                    <a href="http://www.afisha.ru/exhibition/photo/97381/" class="btn btn-default btn-lg" target="_blank">Подробнее</a>
                     <hr>
                 </div><!-- #col-lg-12 Post 2 -->
+                <div class="col-md-10 col-sm-10">
+                    <img class="img-responsive img-border img-full" src=<%= asset_path('blog1.jpg') %>/>
+                    
+                    <h2>Картины, от которых становится тепло на душе
+                        <br>
+                        <small>24 октября 2014</small>
+                    </h2>
+                    <p>Художница Татьяна Самошкина создает на бумаге теплые, немного наивные, но бесконечно добрые миры. В них всего понемногу: есть уютные коты и милые лисы, завитки морских волн и вспышки далеких звезд, чуть-чуть одиночества и грусти — только очень светлой. Таня — непрофессиональная художница, однако видимая простота ее образов нисколько не умаляет их обаяния. Эти рисунки как чашка согревающего чая после прогулки под моросящим осенним дождем.</p>
+                    <a href="http://www.adme.ru/tvorchestvo-hudozhniki/kartiny-ot-kotoryh-stanovitsya-teplo-na-dushe-794060/" class="btn btn-default btn-lg" target="_blank">Подробнее</a>
+                    <hr>
+                </div><!-- #col-lg-12 Post 1 -->
+                
+                
+                
 
                 <!-- <div class="col-lg-12 text-center">
                     <ul class="pager">
