changes in events

--- a/app/views/pages/events.html.erb
+++ b/app/views/pages/events.html.erb
@@ -41,10 +41,10 @@
                 <div class="col-lg-12 text-center">
 
                 	   <div class="col-md-10">
-                	   	   <h2>Курс «Рисунок для ландшафтных дизайнеров и флористов»</h2>
+                	   	   <h2>Курс пастельного рисунка</h2>
                 	       <h3>15, 22, 29 ноября и 6, 13 декабря 2014г с 12.00 до 14.30</h3> 
-                	       <p>Стоимость курса 7500 руб</p>
-		                     <img class="img-responsive img-border img-full" src=<%= asset_path('landscape.jpg') %>/>
+                	       <p>Новый курс по пастели, который объединяет в себе два направления - освоение пастели и базовых основ классического рисунка.</p>
+		                     <img class="img-responsive img-border img-full" src=<%= asset_path('pastelkurs.jpg') %>/>
 		                     <h3>Урок 1.</h3>
 		                     <p>
 													Изучаем базовые основы композиции  и перспективы – для грамотного расположения рисунка на листе. Правила компоновки горизонтальной и вертикальной композиции,  компоновка в круг, квадрат. Правила перспективы. Введение в цвет. Основы колористики. Цветовой круг. Все о сочетании цветов, нюансы и контрасты. Быстрые эскизы цветочных композиций на закрепление пройденного материала.
