--- a/app/views/pages/events.html.erb
+++ b/app/views/pages/events.html.erb
@@ -40,37 +40,41 @@
                 </div></br><!-- #col-lg-12 События  -->
                 <div class="col-lg-12 text-center">
 
-                	   <div class="col-md-10">
+                	   <div class="col-md-10 col-sm-10">
                 	   	   <h2>Курс пастельного рисунка</h2>
                 	       <h3>15, 22, 29 ноября и 6, 13 декабря 2014г с 12.00 до 14.30</h3> 
                 	       <p>Новый курс по пастели, который объединяет в себе два направления - освоение пастели и базовых основ классического рисунка.</p>
 		                     <img class="img-responsive img-border img-full" src=<%= asset_path('pastelkurs.jpg') %>/>
-		                     <h3>Урок 1.</h3>
-		                     <p>
-													Изучаем базовые основы композиции  и перспективы – для грамотного расположения рисунка на листе. Правила компоновки горизонтальной и вертикальной композиции,  компоновка в круг, квадрат. Правила перспективы. Введение в цвет. Основы колористики. Цветовой круг. Все о сочетании цветов, нюансы и контрасты. Быстрые эскизы цветочных композиций на закрепление пройденного материала.
-												 </p>
-												 <h3>Урок 2.</h3>
-												 <p>
-													Изучаем штрих, линии и тон – как их использовать в рисовании цветочных композиции. Работа на черной бумаге белым карандашом и пастелью – изображение фактуры стекла, керамики и растений.                                  Рисуем цветочные композиции используя все полученные знания. 
-												 </p>	
-												 <h3>Урок 3.</h3>
-												 <p>
-													Изучаем форму цветов на основе геометрических фигур – шар, эллипс, конус. Учимся изображать тон, свет, тень. Быстрые рисунки геометрических фигур и эскизы цветов для практики. Рисуем цветочную композицию, применяя на практике правила композиции, перспективы, формы и светотени. Графический рисунок с применением цвета.
-												 </p>	
-												 <h3>Урок 4.</h3>
-												 <p>
-													Цвет. Сочетания цветов в цветочной композиции. Контрастные цвета, сближенные цвета.  Соотношение цвета и тона. Рисуем пастелью – две цветочные композиции, одну на контрасте и вторую на сближенных цветах.
-                          Материал – белая бумага, карандаши, пастель/пастельные карандаши.
-                         </p>
-                         <h3>Урок 5.</h3> 
-                         <p>
-                         	Рисуем пастелью на цветной бумаге – учимся использовать цвет фона в изображении.  Рисунок на контрастном фоне – изучаем, как контрастный цвет фона может обогатить нашу композицию и дать пастели больше цветовых решений. и рисунок на сближенном фоне – учимся, как изображать тонкие сближенные цвета. 
-                         </p>	 
-                         <p>
-                         	После каждого занятия дается домашнее задание, выполнение которого желательно для закрепления полученных знаний и практики, что поможет вам наилучшим образом использовать  все полученные навыки для дальнейшей работы.
-                         </p>	    
-		                     <!-- <a href="https://www.facebook.com/events/782873458437214/" class="btn btn-default btn-lg" target="_blank">Подробнее</a>-->
-		                     <hr>
+		                     
+												<button type="button" class="btn btn-default btn-lg" data-toggle="collapse" data-target="#demo" aria-expanded="true" aria-controls="demo">Подробнее о курсе 
+												</button>
+
+												<div id="demo" class="collapse">
+													<h3>Урок 1.</h3>
+		                      <p>
+													 Изучаем базовые основы композиции и перспективы – для грамотного расположения рисунка на листе. Правила компоновки горизонтальной и вертикальной композиции, компоновка в круг, квадрат. Правила перспективы. Изучаем технику пастели.
+												  </p>
+												  <h3>Урок 2.</h3>
+													<p>
+														Изучаем форму – шар, эллипс, конус. Учимся изображать тон, свет, тень. Быстрые рисунки геометрических фигур и эскизы цветов для практики. Рисуем натюрморт с предметами, применяя на практике правила композиции, перспективы, формы и светотени. 
+													</p>	
+												  <h3>Урок 3.</h3>
+													<p>
+														Изучаем штрих, линии и тон. Работа на черной бумаге белым карандашом и пастелью – изображение фактуры стекла, керамики и растений. Свет и тень.
+													</p>	
+												  <h3>Урок 4.</h3>
+													<p>
+														Цвет. Контрастные цвета, сближенные цвета. Соотношение цвета и тона. Рисуем пастелью – две композиции, одну на контрасте и вторую на сближенных цветах.
+	                        </p>
+                          <h3>Урок 5.</h3> 
+	                        <p>
+	                         	Рисуем пастелью на цветной бумаге – учимся использовать цвет фона в изображении. Рисунок на контрастном фоне – изучаем, как контрастный цвет фона может обогатить нашу композицию и дать пастели больше цветовых решений и рисунок на сближенном фоне – учимся, как изображать тонкие сближенные цвета.
+	                        </p>	 
+                          <p>
+                         	 После каждого занятия дается домашнее задание, выполнение которого желательно для закрепления полученных знаний и практики, что поможет вам наилучшим образом использовать все полученные навыки для дальнейшей работы.
+                         	</p>
+												</div>
+												<hr>
 		                </div><!-- #col-md-10 col-sm-10 Курс «Рисунок для ландшафтных дизайнеров и флористов» -->
                 	   
                 </div><!-- #col-lg-12 Курс «Рисунок для ландшафтных дизайнеров и флористов» --> 	
